Bug 1180848 - FxOS Orange Klif Ivory Coast availability.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -35,6 +35,12 @@
             <li><a class="vivo" href="http://www.vivo.com.br/firefox">Vivo</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="ci">
+          <h3>{{_('Ivory Coast')}}</h3>
+          <ul>
+            <li><a class="orange" href="http://www.orange.ci/telephones/offre-orange-klif.html">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="cl">
           <h3>{{_('Chile')}}</h3>
           <ul>
