--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -85,6 +85,7 @@
               <option value="hu">{{ _('Hungary') }}</option>
               <option value="in">{{ _('India') }}</option>
               <option value="it">{{ _('Italy') }}</option>
+              <option value="ci">{{ _('Ivory Coast') }}</option>
               <option value="jp">{{ _('Japan') }}</option>
               <option value="lu">{{ _('Luxembourg') }}</option>
               <option value="mk">{{ _('Macedonia') }}</option>
@@ -2322,6 +2323,7 @@
 
                   <ul class="comma-list">
                     <li>{{ _('Cameroon') }}</li>
+                    <li>{{ _('Ivory Coast') }}</li>
                     <li>{{ _('Madagascar') }}</li>
                     <li>{{ _('Mauritius') }}</li>
                     <li>{{ _('Senegal') }}</li>
