Added some changes that are broken but don't want to lose them

--- a/bedrock/firefox/templates/firefox/base.html
+++ b/bedrock/firefox/templates/firefox/base.html
@@ -4,7 +4,7 @@
 
 {% extends "base.html" %}
 
-{% block body_class %}sky{% endblock %}
+{% block body_class %}blank{% endblock %}
 
 {% block page_title_prefix %}{{ _('Mozilla Firefox Web Browser') }} — {% endblock %}
 {% block page_image %}{{ static('img/firefox/template/page-image.png') }}{% endblock %}
