--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -7,7 +7,7 @@
 .space #wrapper {
     background-repeat: no-repeat;
     background-position: 0px 180px;
-    background-image: url('/media/img/firefox/releasenotes/aurora_bg_800.png');
+    background-color: white;
 }
 
 .notes-head {
@@ -92,7 +92,6 @@
     a {
         border-bottom: 1px solid rgba(43, 58, 153, .5);
         box-shadow: 0 -2px rgba(0, 0, 0, .2) inset;
-        #gradient > .vertical-three-colors(#7ca9f4, #4b79c6, 3%, #2e4e99);
         text-shadow: 0 1px 0 rgba(0, 0, 0, .35);
     }
 
@@ -100,7 +99,6 @@
         color: #506aa1;
         border-bottom: 1px solid #22366d;
         .box-shadow(0 2px 1 px #0b1b41 inset);
-        #gradient > .vertical(#1a2f5a 14%, #254d90 95%);
         border-radius: 0 6px 6px 0;
         text-shadow: 0 1px rgba(28, 54, 112, .35);
     }
