--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -570,6 +570,10 @@ label.error {
     .offset(2);
 }
 
+.tri-column {
+    .span(4);
+}
+
 .divider.container,
 .divider {
     border-bottom: 1px dotted @borderColor;
