--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -65,6 +65,11 @@ a.more {
                     url(/media/img/sandstone/grain.png) repeat,
                     #eee;
     }
+.blank {
+    #outer-wrapper {
+    background: #FFF;
+    }
+}
 
     a {
         color: @linkSkyBlue;
@@ -383,6 +388,10 @@ input[type=tel]:focus {
 .sidebar {
     .span(2);
     .offset(2);
+}
+
+.tri-column {
+    .span(3);
 }
 
 .divider.container,
