--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -3,12 +3,11 @@
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
 {% extends "firefox/base-resp.html" %}
-
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _('{product} — {channel} Notes ({version})')|f(product=release.product, channel=channel_name, version=release.version) }}{% endblock %}
 
 {% block body_id %}notes{% endblock %}
-{% block body_class %}fx-notes sky{% endblock %}
+{% block body_class %}fx-notes blank{% endblock %}
 
 {% block site_css %}
   {% stylesheet 'firefox_releasenotes' %}
@@ -77,16 +76,13 @@
     </header>
   {% endblock %}
 
-    <div class="main-column">
+    <div class="tri-column">
       {% if new_features %}
       <section class="notes-section" id="new-features">
-        <h3>{{ _('What’s New') }}</h3>
         <ul class="section-items tagged">
-          {% for note in new_features %}
-          <li {% if not note.tag %}class="untagged"{% endif %} id="note-{{ note.id }}">
-            {% if note.tag %}
-              <b class="tag tag-{{ note.tag.lower() }}">{{ note.tag }}</b>
-            {% endif %}
+        <h1> NEW </h1>
+        {% for note in new_features %}
+          <li style="visibility:hidden" {% if not note.tag %}class="untagged"{% endif %} id="note-{{ note.id }}">
               {{ note.note|markdown|safe }}
           </li>
           {% endfor %}
@@ -115,49 +111,39 @@
       {% endif %}
     </div>
 
-  {% block notes_sidebar %}
-    <aside id="sidebar" class="sidebar">
-      {% block notes_sidebar_download %}
-      <section id="try">
-        <h3>{{ _('Try Firefox %s')|format(channel_name) }}</h3>
-        <ol>
-          {% set check_url = 'https://support.mozilla.org/kb/will-firefox-work-my-mobile-device' if release.product == 'Firefox for Android' else url('firefox.system_requirements', version) %}
-          <li class="try1"><a href="{{ check_url }}">{{ _('Check') }}</a></li>
-          <li class="try2"><a href="{{ download_url }}">{{ _('Download') }}</a></li>
-          {% if release.product == 'Firefox for Android' %}
-          <li class="try3"><a href="https://support.mozilla.org/products/mobile/download-and-install">{{ _('Install') }}</a></li>
-          {% else %}
-          <li class="try3"><a href="https://support.mozilla.org/products/firefox/download-and-install">{{ _('Install') }}</a></li>
-          {% endif %}
-          <li class="try4"><a href="https://addons.mozilla.org/firefox/">{{ _('Customize') }}</a></li>
-        </ol>
+        <div class="tri-column">
+      {% if new_features %}
+      <section class="notes-section" id="new-features">
+        <ul class="section-items tagged">
+          {% for note in new_features %}
+          <li {% if not note.tag %}class="untagged"{% endif %} id="note-{{ note.id }}">
+              {{ note.note|markdown|safe }}
+          </li>
+          {% endfor %}
+        </ul>
       </section>
-      {% endblock %}
-
-      <section id="get-involved">
-        <h3>{{ _('Want to get involved?') }}</h3>
-        <p>{{ _('Did you know that most of the content in Firefox Support was written by volunteers?') }}<br>
-        <a href="{{ url('mozorg.contribute') }}">{{ _('Find out more') }}</a></p>
+      {% endif %}
+      {% if known_issues %}
+      <section class="notes-section" id="known-issues">
+        <h3>{{ _('Known Issues') }}</h3>
+        <ul class="section-items tagged">
+          {% for note in known_issues %}
+            <li id="note-{{ note.id }}">
+                <b class="tag tag-unresolved">{{ _('unresolved') }}</b>
+                {{ note.note|markdown|safe }}
+            {% if note.fixed_in_release %}
+              <p class="note">
+                <a href="{{ releasenotes_url(note.fixed_in_release) }}">
+                  {{ _('Resolved in v{version_number}')|f(version_number=note.fixed_in_release.version) }}
+                </a>
+              </p>
+            {% endif %}
+            </li>
+          {% endfor %}
+        </ul>
       </section>
-
-      <section id="problems">
-        <h3>{{ _('Having Problems?') }}</h3>
-        <ol>
-          <li><a href="{{ support_url }}">{{ _('Search for answers on the Firefox Support page') }}</a></li>
-          {% if known_issues %}
-          <li><a href="#known-issues">{{ _('Look at the known issues list and see if we already know about the problem') }}</a></li>
-          {% endif %}
-          <li><a href="https://bugzilla.mozilla.org/enter_bug.cgi">{{ _('If you can’t find reference to your issue, please consider filing a technical bug report') }}</a></li>
-        </ol>
-      </section>
-
-      <section id="other">
-        <h3>{{ _('Other Resources') }}</h3>
-        <p><a href="https://developer.mozilla.org/docs/Mozilla/Firefox/Releases/{{ release.major_version() }}">{{ _('Developer Information') }}</a></p>
-        <p><a href="https://blog.mozilla.com/futurereleases/">{{ _('Future of Firefox Blog') }}</a></p>
-      </section>
-    </aside>
-  {% endblock %}
+      {% endif %}
+    </div>
 
   </article>
 </main>
