--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -212,7 +212,7 @@ article {
 
 .section-items.tagged {
     > li {
-        padding-left: 160px;
+        padding-left: 0;
 
         &.untagged {
             padding-left: 0;
