--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -897,6 +897,13 @@ html[lang|="en"] {
         .background-size(100px, 100px);
     }
 }
+html[dir="rtl"] {
+	.promo-small-landscape.webmaker{
+		h2 {
+			padding: 12px 35px 35px 130px;
+		}
+	}
+}
 
 
 /****************************************************************************/
