Bug 1177817. Update Fx 38.0.5 firstrun CTA.

--- a/media/css/firefox/australis/fx38_0_5/firstrun.less
+++ b/media/css/firefox/australis/fx38_0_5/firstrun.less
@@ -49,7 +49,7 @@ h2 {
     .rightcol {
         margin-top: 110px;
         width: 320px;
-        padding: 30px 20px;
+        padding: 30px 20px 20px;
         border-radius: 6px;
         background: #fff;
         text-align: center;
