--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -290,9 +290,16 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/gautha91/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/gauthamraj-elango.jpg') }}">
-          <span class="fn" itemprop="name">Gauthamraj Elango</span>
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/bacharakis/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/christos-bacharakis.jpg') }}">
+          <span class="fn" itemprop="name">Christos Bacharakis</span>
+        </a>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/shahidfarooqui/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/shahid-farooqui.jpg') }}">
+          <span class="fn" itemprop="name">Shahid Ali Farooqui</span>
         </a>
       </li>
 
@@ -304,13 +311,6 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/emma_irwin_/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/emma-irwin.jpg') }}">
-          <span class="fn" itemprop="name">Emma Irwin</span>
-        </a>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://reps.mozilla.org/u/jsan4christ/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/san-emmanuel-james.jpg') }}">
           <span class="fn" itemprop="name">San Emmanuel James</span>
@@ -318,16 +318,16 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/nukeador/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/ruben-martin.jpg') }}">
-          <span class="fn" itemprop="name">Rubén Martin</span>
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/michaelkohler/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/michael-kohler.jpg') }}">
+          <span class="fn" itemprop="name">Michael Kohler</span>
         </a>
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/thephoenixbird/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/arturo-martinez.jpg') }}">
-          <span class="fn" itemprop="name">Arturo Martinez</span>
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/nukeador/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/ruben-martin.jpg') }}">
+          <span class="fn" itemprop="name">Rubén Martin</span>
         </a>
       </li>
 
