Removed tri-column from sandstone

--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -75,7 +75,7 @@
     </header>
   {% endblock %}
 
-    <div class="tri-column">
+    <div class="label-column">
       {% if new_features %}
       <section class="notes-section" id="new-features">
         <ul class="section-items tagged">
@@ -175,7 +175,7 @@
       {% endif %}
     </div>
 
-        <div class="tri-column">
+        <div class="notes-column">
       {% if new_features %}
       <section class="notes-section" id="new-features">
         <ul class="section-items tagged">
@@ -274,7 +274,7 @@
       {% endif %}
     </div>
 
-            <div class="tri-column">
+            <div class="tri-column" id="note-media">
       {% if new_features %}
       <section class="notes-section" id="new-features">
         <ul class="section-items tagged">
